website fully responsive, added : dropdown menu on menu icon, links working and color changed to match article, added various margin and padding to ajust content, some color twik

--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -11,6 +11,23 @@ html {
 }
 
 
+/* Link */
+
+a {
+    text-decoration: none;
+    color : rgb(196, 191, 191);
+    text-shadow:
+    -1px 1px 0 rgba(155, 9, 9, 0.87),
+    1px -1px 0 rgba(155, 9, 9, 0.87),
+    -1px 1px 0 rgba(155, 9, 9, 0.87),
+    1px 1px 0 rgba(155, 9, 9, 0.87);
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+
 /* Text */
 
 .text_white {
@@ -26,7 +43,7 @@ html {
 /* Title */
 
 .title {
-    margin: 0rem;
+    margin: 0.5rem;
     padding: 1.5rem;
     width: 100%;
     text-align: center;
@@ -37,7 +54,7 @@ html {
 
 h1 {
     color: rgba(204, 26, 26, 0.808);
-    font-size: 3rem;
+    font-size: 3.5rem;
     text-shadow:
     -1px 1px 0 #000,
     1px -1px 0 #000,
@@ -77,6 +94,10 @@ header {
 /* body */
 
 body {
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,0.9836309523809523) 46%
+    , rgba(0,0,0,0.6923144257703081) 65%
+    , rgba(0,0,0,0.3925945378151261) 82%);
     margin: 0;
 }
 
@@ -94,6 +115,7 @@ body {
     padding: 0.5rem;
     border: 0.15rem solid black;
     background: rgba(184, 2, 2, 0.699);
+    position: relative;
 }
 
 .affiche {
@@ -101,11 +123,25 @@ body {
     height: 30rem;
 }
 
+.google_map {
+    padding-bottom: 2rem;
+    width: 25rem ;
+    height: 20rem;
+}
+
 
 /* Div */
 
+.newsletter {
+    font-size: 2rem;
+    background: grey;
+    width: 100%;
+    height: 10rem;
+}
+
 .copyright {
-    background-color: blue;
+    background: rgb(100, 99, 99);
+    width: 100%;
 }
 
 
@@ -142,14 +178,53 @@ li {
     text-align: left;
 }
 
+ol {
+    color: rgb(160, 20, 20);
+    font-size: 1.5rem;
+}
+
+
+/* Menu */
+
 .menu {
     display: flex;
-    align-content: center;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.menu:hover .menu_sub{
+    
+    display: flex;
+    flex-direction: column;
+    background: rgba(196, 2, 2, 0.74);
+    color: black;
 }
 
 .menu_sub {
     display: none;
-    background: red;
+    position: absolute;
+    background: rgba(51, 51, 51, 0.801);
+    top: 7rem;
+}
+
+.menu_sub a{
+    font-size: 1.5rem;
+    color: red;
+    text-decoration: none;
+    background: rgba(51, 51, 51, 0.801);
+    padding: 0.5rem 0.7rem;
+}
+
+.menu_sub a:hover{
+    padding: 0.5rem 0.7rem;
+    text-decoration: underline;
+    background: rgba(10, 10, 10, 0.801);
+}
+
+.menu_sub a:visited{
+    text-decoration: none;
+    color: none;
 }
 
 /* Section */
@@ -159,29 +234,21 @@ section {
 }
 
 .section_1 {
-    height:     500px;
-    color : rgba(0, 0, 0, 0.342);
-}
-
-.section_2 {
-    background-color: rgba(0, 0, 0, 0.514);
-}
-
-.section_3 {
-    background-color: rgba(0, 0, 0, 0.719);
+    height: 35rem;
 }
 
 .section_4 {
-    background-color: rgba(0, 0, 0, 0.897);
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
 .section_5 {
-    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    text-align: left;
+    margin: 1rem;
 }
-
 
 /* Flex */
 
@@ -206,6 +273,39 @@ section {
     flex-wrap: wrap;
 }
 
+.container_form_block {
+    display: flex;
+    flex-direction: column;
+}
+
+.container_form_line {
+    display: flex;
+}
+
+.container_form_line input{
+    width: 100%;
+    margin: 0.1rem;
+}
+
+.container_form_line button{
+    width: 33%;
+    margin: 0.1rem;
+}
+
+.container_form_fullline {
+    display: flex;
+}
+
+.container_form_fullline input,textarea{
+    width: 100%;
+    margin: 0.1rem;
+}
+
+.container_footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /* Table */
 
@@ -219,27 +319,28 @@ th, td {
     text-align: center;
     color: white;
     text-shadow:
-    -1px 1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
+    -0.15rem 0.15rem 0 #000,
+    0.15rem -0.15rem 0 #000,
+    -0.15rem 0.15rem 0 #000,
+    0.15rem 0.15rem 0 #000;
 }
 
 th {
-        border: 1px solid rgba(138, 3, 3, 0.993);
-        background-color: rgba(0, 0, 0, 0.397);
+    border: 1px solid rgba(138, 3, 3, 0.993);
+    background-color: rgb(83, 13, 13);
 }
 
 td {
-        border: 1px solid rgba(170, 1, 1, 0.507);
-        background-color: rgb(0, 0, 0);
+    border: 1px solid rgba(170, 1, 1, 0.507);
+    background-color: rgba(83, 13, 13, 0.37);
 }
 
 
 /* Footer */
 
 footer {
-    background-color: cornflowerblue;
+    display:flex;
+    flex-direction: column;
 }
 
 /* Other */
