corrected line suppression in container_info_pratique missing justify-content : space-around;

--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -280,12 +280,14 @@ section {
 
 .container_info_pratique {
     display: flex;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
 .container_form_block {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .container_form_line {
